--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 server.error.include-exception=false
 server.error.include-stacktrace=never
 server.error.inlude-message=always
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/parking
+spring.datasource.username=admin
+spring.datasource.password=123
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
